# aphrodite-rs

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile  README-ja.md  README-zh.md  README.md  config.toml.example  demo_rs.sql  docker-compose.yml  openapi.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
app/: Cargo.toml
app/src/api/controller/: auth.rs  health.rs  mod.rs  user.rs
app/src/api/router/: app.rs
app/src/api/service/: auth.rs  user.rs
app/src/ent/: mod.rs  prelude.rs  user.rs
config/: config.toml.example
database/migrations/: V1.0.0__initial_schema.sql
deploy/: Dockerfile  db.sql  docker-compose.yml  kubernetes.yml
deploy/docker-compose/config/: local.toml
docs/: openapi.json
pkg/: Cargo.toml
pkg/src/: identity.rs
src/: main.rs
src/app/: mod.rs
src/app/api/: auth.rs  health.rs  mod.rs  user.rs
src/app/api/controller/: auth.rs  health.rs  user.rs
src/app/api/middleware/: auth.rs
src/app/api/router/: app.rs
src/app/cmd/: mod.rs
src/app/middleware/: auth.rs  mod.rs
src/app/model/: prelude.rs  user.rs
src/app/router/: app.rs  mod.rs  route.rs
src/app/service/: auth.rs  user.rs
src/pkg/: identity.rs  mod.rs  xtime.rs
src/pkg/core/: cache.rs  config.rs  db.rs  logger.rs
src/pkg/crypto/: aes.rs  hash.rs
src/pkg/middleware/: cors.rs  identity.rs  log.rs  mod.rs  trace.rs
src/pkg/result/: rejection.rs  response.rs  status.rs
src/pkg/util/: identity.rs  mod.rs  mutex.rs  snowflake.rs  xtime.rs
storage/logs/: server.log.2024-11-03
(+2 files in other folders)
