[package]
name = "aphrodite-rs"
version = "1.0.0"
edition = "2021"
description = "API project aphrodite for Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "pkg", "app"]

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
tracing-appender = "0.2"

# workspace modules
pkg = { path = "pkg" }
app = { path = "app" }
